# spring-server/src/main/java/ch/heigvd/gamification/api/BadgesController.java
@@ -7,10 +7,16 @@ import ch.heigvd.gamification.model.Badge;
 import ch.heigvd.gamification.repository.ApplicationRepository;
 import ch.heigvd.gamification.repository.BadgeRepository;
 import ch.heigvd.gamification.util.ModelToDTOConverter;
+import io.swagger.annotations.ApiParam;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.http.HttpStatus;
+
+import javax.validation.Valid;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -28,7 +34,7 @@ public class BadgesController implements BadgesApi {
     private BadgeRepository badgeRepository;
 
     @Override
-    public ResponseEntity<List<BadgesResponseDTO>> badgesGet(String xApiKey) {
+    public ResponseEntity<List<BadgesResponseDTO>> badgesGet(@ApiParam(value = "token that contains the application key" ,required=true) @RequestHeader(value="X-Api-Key", required=true) String xApiKey) {
         Application application = applicationRepository.findByAppKey(xApiKey);
 
         if (application != null) {
@@ -48,7 +54,7 @@ public class BadgesController implements BadgesApi {
     }
 
     @Override
-    public ResponseEntity<Void> badgesIdDelete(String xApiKey, Long id) {
+    public ResponseEntity<Void> badgesIdDelete(@ApiParam(value = "token that contains the application key" ,required=true) @RequestHeader(value="X-Api-Key", required=true) String xApiKey,@ApiParam(value = "Badge id to delete",required=true ) @PathVariable("id") Long id) {
         Badge badge = getBadge(xApiKey, id);
         if (badge == null)
             return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
@@ -63,7 +69,7 @@ public class BadgesController implements BadgesApi {
     }
 
     @Override
-    public ResponseEntity<Void> badgesIdPut(String xApiKey, Long id, BadgesDTO body) {
+    public ResponseEntity<Void> badgesIdPut(@ApiParam(value = "token that contains the application key" ,required=true) @RequestHeader(value="X-Api-Key", required=true) String xApiKey,@ApiParam(value = "BadgeModel id to update",required=true ) @PathVariable("id") Long id,@ApiParam(value = "The badge must have a new name and a new description" ,required=true )  @Valid @RequestBody BadgesDTO body) {
         Badge badge = getBadge(xApiKey, id);
         if (badge != null) {
             if (!body.getDescription().isEmpty() && !body.getName().isEmpty()) {
@@ -78,7 +84,7 @@ public class BadgesController implements BadgesApi {
     }
 
     @Override
-    public ResponseEntity<Void> badgesPost(String xApiKey, BadgesDTO body) {
+    public ResponseEntity<Void> badgesPost(@ApiParam(value = "token that contains the application key" ,required=true) @RequestHeader(value="X-Api-Key", required=true) String xApiKey,@ApiParam(value = "The new badge need to have a name and a description." ,required=true )  @Valid @RequestBody BadgesDTO body) {
         Application application = applicationRepository.findByAppKey(xApiKey);
 
         if (application != null) {
